--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>LO VEZ</h1>
         <h1>YA LO VI ANUMA</h1>
         <h1>chales no va a durar en la carrera :(</h1>
+        <h1>Dile que ahi esta filosofia xd</h1>
     </header>
 </body>
 </html>
