--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>YA LO VI ANUMA</h1>
         <h1>chales no va a durar en la carrera :(</h1>
         <h1>Dile que ahi esta filosofia xd</h1>
+        <h1>ni pedoo yo la voy a mantener</h1>
     </header>
 </body>
 </html>
