--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>chales no va a durar en la carrera :(</h1>
         <h1>Dile que ahi esta filosofia xd</h1>
         <h1>ni pedoo yo la voy a mantener</h1>
+        <h2>david tambien me va a manetener jaja salu2</h2>
     </header>
 </body>
 </html>
