--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>Dile que ahi esta filosofia xd</h1>
         <h1>ni pedoo yo la voy a mantener</h1>
         <h2>david tambien me va a manetener jaja salu2</h2>
+        <h2>al azteca mañana</h2>
     </header>
 </body>
 </html>
