--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>ni pedoo yo la voy a mantener</h1>
         <h2>david tambien me va a manetener jaja salu2</h2>
         <h2>al azteca mañana</h2>
+        <h2>no tengo varo wey:c</h2>
     </header>
 </body>
 </html>
